--- a/style.css
+++ b/style.css
@@ -1,22 +1,36 @@
 body{
+  font-family: Helvetica;
+  font-size: 22px;
+  color: Seashell;
   background-color: black;
-  color: white;
+  opacity: 0.9;
+  text-align: center;
 }
-
 
 header{
-  box-sizing: border-box;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  height: 69px;
+  border-bottom: 1px solid Seashell;
+  padding: 4.5px 10px;
+  background-color: black;
+  opacity: 1;
+  z-index: 10;
 }
 
+footer{
+  text-align: left;
+}
+
+nav{
+  display: flex;
+  align-items: center;
+}
 
 .logo{
   display: flex;
   align-items: center;
-}
-
-.nav{
-  display: flex;
-  align-items: center;
+  height: 50px;
 }
