--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body{
   background-color: black;
   opacity: 0.9;
   text-align: center;
+  margin: 0;
 }
 
 header{
@@ -18,6 +19,11 @@ header{
   background-color: black;
   opacity: 1;
   z-index: 10;
+  margin: 0;
+  width: 100%;
+  box-sizing: border-box;
+
+
 }
 
 footer{
