--- a/style.css
+++ b/style.css
@@ -62,11 +62,24 @@ a:visited{
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg);
   width: 1200px;
   height: 700px;
+  display: flex;
+  justify-content: center;
 
 }
 
-.mission_text{
+.mission_text1, .mission_text2{
   display: flex;
-  flex-direction: column;
   justify-content: center;
+  align-items: center;
+  background-color: black;
+  width: 1200px;
+}
+
+.mission_text1{
+  margin-bottom: 0;
+  padding: 10px 0px 25px 0px;
+}
+.mission_text2{
+  margin-top: 0;
+  padding-bottom: 10px;
 }
