centered mission statement

--- a/style.css
+++ b/style.css
@@ -64,7 +64,12 @@ a:visited{
   height: 700px;
   display: flex;
   justify-content: center;
+}
 
+.mission_text{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .mission_text1, .mission_text2{
