--- a/style.css
+++ b/style.css
@@ -58,6 +58,8 @@ a:visited{
   padding-top: 69px;
 }
 
+/* MISSION */
+
 .mission_body{
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg);
   width: 1200px;
@@ -84,7 +86,13 @@ a:visited{
   margin-bottom: 0;
   padding: 10px 0px 25px 0px;
 }
+
 .mission_text2{
   margin-top: 0;
   padding-bottom: 10px;
+}
+
+/* TEA OF THE MONTH */
+
+.fall{
 }
