--- a/style.css
+++ b/style.css
@@ -110,6 +110,7 @@ a:visited{
   width: 1000px;
   justify-content: center;
 }
+
 .bottomline_item_width{
   display: flex;
   width: 650px;
@@ -130,4 +131,22 @@ a:visited{
 .item h4{
   padding: 20px 0px;
   margin: 0;
+}
+
+/* LOCATIONS */
+
+.locations{
+  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg);
+  width: 1200px;
+  height: 500px;
+}
+
+.block{
+  background-color: black;
+  width: 300px;
+  opacity: 1;
+}
+
+.name{
+
 }
