--- a/style.css
+++ b/style.css
@@ -138,9 +138,12 @@ a:visited{
 .locations{
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg);
   width: 1200px;
-  height: 500px;
+  height: 580px;
 }
 
+#top_locations{
+  margin-bottom: 0px;
+}
 .block_width{
   display: flex;
   justify-content: center;
