--- a/style.css
+++ b/style.css
@@ -90,11 +90,15 @@ h2::before{
 .mission_text1{
   margin-bottom: 0;
   padding: 10px 0px 25px 0px;
+  background-color: rgba(255,255,255,0);
+  color: #FAEC9F;
 }
 
 .mission_text2{
   margin-top: 0;
   padding-bottom: 10px;
+  background-color: rgba(255,255,255,0);
+  color: #FAEC9F;
 }
 
 /* TEA OF THE MONTH */
@@ -148,7 +152,7 @@ h2::before{
 
 #top_locations{
   margin: 60px 0px 0px 0px;
-
+  color: #001565;
 }
 
 .block_width{
@@ -157,12 +161,13 @@ h2::before{
 }
 
 .block{
-  background-color: black;
+  background-color: rgba(255,255,255,0);
   width: 300px;
   opacity: 1;
   display: flex;
   flex-direction: column;
   margin: 20px;
+  color: #001565;
 }
 
 /* CONTACT */
